hphp/hack/test/typecheck/reactive/rx_append1.php.like_types.exp
File "rx_append1.php", line 6, characters 3-6:
This object's property is being mutated (used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
